--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,8 @@
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
     "editor.formatOnSave": true
   },
+  "github.copilot.enable": {
+    "*": false,
+    "rust": true,
+  },
 }
