--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/jajuojan/for-each-dir"
 license = "MIT"
 
 [dependencies]
-clap = { version = "4.5.27", features = ["derive"] }
+clap = { version = "4.*", features = ["derive"] }
 
 [profile.release]
 strip = true
